# ai-pdf

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  __main__.py  create_gcp_keys.py  docker-compose.yml  paths.py  requirements.txt  tables.sql
lib/pdf_extraction/: Cargo.toml
lib/pdf_extraction/src/: lib.rs
src/: container.py
src/app/chat/: __init__.py  create_new_chat_usecase.py  get_chat_usecase.py  list_chats_usecase.py  send_new_message_usecase.py  update_chat_usecase.py
src/app/pdf/: __init__.py  find_relative_quotes_usecase.py  get_pdfs_usecase.py  new_pdf_embedding_usecase.py
src/auth/: find_user_by_token.py
src/infra/clients/: __init__.py  ai_client.py  gcp_storage_client.py
src/infra/database/: __init__.py  database_engine.py
src/infra/database/repositories/: __init__.py  chat_repository.py  pdf_vector_repository.py  user_repository.py
src/interfaces/http/: chat_router.py  pdf_router.py  server.py
src/interfaces/http/types/: chat_requests.py  chat_responses.py  pdf_requests.py  pdf_responses.py
src/types/: chat.py  pdf_vector.py  user.py
src/utils/: decorators.py
